<resources>
    <string name="app_name">Chatter</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login Strings -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>

    <!-- Register Strings -->
    <string name="display_name">Display Name</string>
    <string name="re_enter_your_password">Re-Enter Your Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an Account ?</string>

    <!-- MainActivity Strings -->
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="settings">Settings</string>
    <string name="enter_your_new_email_address">Enter your new Email Address</string>
    <string name="name">Name</string>
    <string name="name_info">This is not your username or pin. This name will be visible to your friends</string>
    <string name="about">About</string>
    <string name="edit_info">Edit Info</string>
    <string name="done">Done</string>
    <string name="forward">Forward</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="delete_for_everyone">Delete for everyone</string>
    <string name="change_password">Change Password</string>
    <string name="e_mail">E-mail</string>
    <string name="status">Status</string>
    <string name="log_out">Log out</string>
    <string name="select_accent_color">Select Accent Color</string>
    <string name="enter_message">Enter Message…</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="select_app_accent_color">Select App Accent Color</string>
    <string name="select_text_color">Select Text Color</string>
    <string name="select_title_text_color">Select Title Text Color</string>
    <string name="deleted_for_you">Deleted For You</string>
    <string name="online">online</string>
    <string name="you">You</string>
    <string name="check_for_update">Check For Update</string>

</resources>
