<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp">

    <LinearLayout
        android:id="@+id/app_accent_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/app_accent_color_box"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/color_picker_box"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/select_app_accent_color"
            android:textSize="18sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_color_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/text_color_box"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/color_picker_box"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/select_text_color"
            android:textSize="18sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_text_color_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/title_text_color_box"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/color_picker_box"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/select_title_text_color"
            android:textSize="18sp"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>